[package]
name = "Smalltalk"
version = "0.1.1"
authors = ["Graham"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[web]]
name = "main" # web/main.rs

[[inOS]]
name = "main" # inOS/main.rs

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["alloc","derive"] }
rmp = "0.8.9"
rmp-serde = "0.14.3"
typenum = "1.12.0"
type-operators = "0.3.5"

[[web]]
stdweb = "0.4.20"

[[inOS]]
jack = "0.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
